--- a/Simple Websocket/readme
+++ b/Simple Websocket/readme
@@ -1,2 +1,3 @@
 1. Supports in both forward and backward communication using TCP protocol. 
 2. Client to server & Server to Client both way messages can be sent/received.
+3. Await is to wait till the message is sent or received from the server side when used in client side of the program.
